# ClassificationAndDetection

./: README.md  app.py  todo.md
bing/: CMakeLists.txt  bing.cpp  bing.py  bingTest.py
bing/model/: ObjNessB2W8MAXBGR.wS1  ObjNessB2W8MAXBGR.wS2
python/: detect.py
python/caffe/: detector.py
static/css/: jquery.qtip.css
static/js/: luyifan.js  main.js
templates/: box_clustering.html  classification.html  configuration.html  configuration_work.html  detection.html  index.html
